--- a/School.Entities/School.Entities.csproj
+++ b/School.Entities/School.Entities.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Fields\User.cs" />
     <Compile Include="myStoreModels\Class1.cs" />
     <Compile Include="myStoreModels\ProductViewModel.cs" />
+    <Compile Include="myStoreModels\store_exp1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Fields\StudentResults.cs" />
     <Compile Include="Fields\Student.cs" />
