--- a/School.UI/School.UI.csproj
+++ b/School.UI/School.UI.csproj
@@ -174,6 +174,7 @@
     <Compile Include="ViewModels\StudentSubjectMarksVM.cs" />
     <Compile Include="ViewModels\StudentResultsVM.cs" />
     <Compile Include="ViewModels\StudentViewModel.cs" />
+    <Compile Include="ViewModels\SubjectViewModel.cs" />
     <Compile Include="ViewModels\TeacherViewModel.cs" />
     <Compile Include="ViewModels\TeacherVM\TeacherRoleViewModel.cs" />
     <Compile Include="ViewModels\TeacherVM\TeacherTimesheetViewModel.cs" />
@@ -1280,6 +1281,7 @@
     <Content Include="Views\StudentMarks\_TableRecordSubjectMarks.cshtml" />
     <Content Include="Views\StudentMarks\_TableSubjectMarksOnly.cshtml" />
     <Content Include="Views\StudentResult\_UpdateSubjectMarks.cshtml" />
+    <Content Include="Views\Subject\_AddSubjectToClass.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
