... done for now ...

--- a/School.Services/School.Services.csproj
+++ b/School.Services/School.Services.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Interface\IClassTeacherRepository.cs" />
     <Compile Include="Interface\IGradeTeacherRepository.cs" />
     <Compile Include="Interface\IStudentAttendanceRepository.cs" />
+    <Compile Include="Interface\IStudentRegisterRepository.cs" />
     <Compile Include="Interface\ITeacherRegisterRepository.cs" />
     <Compile Include="Interface\IStudentMarksRepository.cs" />
     <Compile Include="Interface\IStudentSubjectMarksRepository.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="Repository\StudentSubjectMarksRepository.cs" />
     <Compile Include="Repository\GradeClassRepository.cs" />
     <Compile Include="Repository\SubjectTeacherRepository.cs" />
+    <Compile Include="Repository\StudentRegisterRepository.cs" />
     <Compile Include="Repository\TeacherRegisterRepository.cs" />
     <Compile Include="Repository\TeacherRepository.cs" />
     <Compile Include="Repository\SubjectResultRepository.cs" />
