--- a/School.Entities/School.Entities.csproj
+++ b/School.Entities/School.Entities.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Fields\appMenu.cs" />
     <Compile Include="Fields\ClassOrCourse.cs" />
     <Compile Include="Fields\lc_Class.cs" />
+    <Compile Include="Fields\Roles.cs" />
     <Compile Include="Fields\Teacher.cs" />
     <Compile Include="Fields\StudentClass.cs" />
     <Compile Include="Fields\ClassTeacher.cs" />
