--- a/School.UI/School.UI.csproj
+++ b/School.UI/School.UI.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Models\MySecurity\CustomAuthorize.cs" />
     <Compile Include="Models\MySecurity\MaxFileSizeAttribute.cs" />
     <Compile Include="Models\StudentModel\StudentAttendanceModel.cs" />
+    <Compile Include="ViewModels\RolesViewModel.cs" />
     <Compile Include="ViewModels\DropBoxViewModel.cs" />
     <Compile Include="ViewModels\StudentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -1289,6 +1290,8 @@
     <Content Include="Views\Shared\_dropboxOnly.cshtml" />
     <Content Include="Views\StudentRegister\_PartialDropbox.cshtml" />
     <Content Include="Views\StudentRegister\_PartialDropboxSurbub.cshtml" />
+    <Content Include="Views\Roles\_StudentRoles.cshtml" />
+    <Content Include="Views\Roles\_RolesData.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
