--- a/School.Services/School.Services.csproj
+++ b/School.Services/School.Services.csproj
@@ -51,9 +51,10 @@
     <Compile Include="Interface\Class1.cs" />
     <Compile Include="Interface\IClassTeacherRepository.cs" />
     <Compile Include="Interface\IGradeTeacherRepository.cs" />
+    <Compile Include="Interface\IUserRolesRepository.cs" />
     <Compile Include="Interface\IStudentAttendanceRepository.cs" />
     <Compile Include="Interface\IStudentRegisterRepository.cs" />
-    <Compile Include="Interface\IPermissionRepository.cs" />
+    <Compile Include="Interface\IRolesRepository.cs" />
     <Compile Include="Interface\ITeacherRegisterRepository.cs" />
     <Compile Include="Interface\IStudentMarksRepository.cs" />
     <Compile Include="Interface\IStudentSubjectMarksRepository.cs" />
@@ -71,11 +72,12 @@
     <Compile Include="Interface\IStudentResultsRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\GradeTeacherRepository.cs" />
+    <Compile Include="Repository\UserRolesRepository.cs" />
     <Compile Include="Repository\StudentAttendanceRepository.cs" />
     <Compile Include="Repository\StudentMarksRepository.cs" />
     <Compile Include="Repository\StudentSubjectMarksRepository.cs" />
     <Compile Include="Repository\GradeClassRepository.cs" />
-    <Compile Include="Repository\PermissionRepository.cs" />
+    <Compile Include="Repository\RolesRepository.cs" />
     <Compile Include="Repository\SubjectTeacherRepository.cs" />
     <Compile Include="Repository\StudentRegisterRepository.cs" />
     <Compile Include="Repository\TeacherRegisterRepository.cs" />
