busy editing user roles

--- a/School.Services/School.Services.csproj
+++ b/School.Services/School.Services.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateDatabase\DelegatesDatabase.cs" />
+    <Compile Include="CreateDatabase\DelegatesExp1.cs" />
     <Compile Include="Data\DataBaseConnectorString.cs" />
     <Compile Include="Interface\Class1.cs" />
     <Compile Include="Interface\IClassTeacherRepository.cs" />
