--- a/School.UI/School.UI.csproj
+++ b/School.UI/School.UI.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ErrorsController.cs" />
     <Compile Include="Controllers\DropboxController.cs" />
+    <Compile Include="Controllers\NotifyController.cs" />
     <Compile Include="Controllers\StudentMarksController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\TeacherRegisterController.cs" />
@@ -1304,6 +1305,7 @@
     <Folder Include="Content\images\ReSized\img\" />
     <Folder Include="Content\images\Spijo\" />
     <Folder Include="Views\Errors\" />
+    <Folder Include="Views\Notify\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
