--- a/School.Services/School.Services.csproj
+++ b/School.Services/School.Services.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Interface\Class1.cs" />
     <Compile Include="Interface\IClassTeacherRepository.cs" />
     <Compile Include="Interface\IGradeTeacherRepository.cs" />
+    <Compile Include="Interface\ITeachingRolesRepository.cs" />
     <Compile Include="Interface\IUserRolesRepository.cs" />
     <Compile Include="Interface\IStudentAttendanceRepository.cs" />
     <Compile Include="Interface\IStudentRegisterRepository.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="Interface\IStudentResultsRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\GradeTeacherRepository.cs" />
+    <Compile Include="Repository\TeachingRolesRepository.cs" />
     <Compile Include="Repository\UserRolesRepository.cs" />
     <Compile Include="Repository\StudentAttendanceRepository.cs" />
     <Compile Include="Repository\StudentMarksRepository.cs" />
