--- a/School.Services/School.Services.csproj
+++ b/School.Services/School.Services.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Data\DataBaseConnectorString.cs" />
     <Compile Include="Interface\Class1.cs" />
     <Compile Include="Interface\IClassTeacherRepository.cs" />
+    <Compile Include="Interface\IClassesRepository.cs" />
     <Compile Include="Interface\IGradeTeacherRepository.cs" />
     <Compile Include="Interface\ITeachingRolesRepository.cs" />
     <Compile Include="Interface\IUserRolesRepository.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="Interface\IStudentRepository.cs" />
     <Compile Include="Interface\IStudentResultsRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ClassesRepository.cs" />
     <Compile Include="Repository\GradeTeacherRepository.cs" />
     <Compile Include="Repository\TeachingRolesRepository.cs" />
     <Compile Include="Repository\UserRolesRepository.cs" />
