--- a/School.UI/School.UI.csproj
+++ b/School.UI/School.UI.csproj
@@ -141,10 +141,12 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="Controllers\BaseController_Ref.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\QuestionPaperController.cs" />
     <Compile Include="Controllers\GradeClassController.cs" />
     <Compile Include="Controllers\ErrorsController.cs" />
     <Compile Include="Controllers\DropboxController.cs" />
     <Compile Include="Controllers\ClassesController.cs" />
+    <Compile Include="Controllers\BooksController.cs" />
     <Compile Include="Controllers\NotifyController.cs" />
     <Compile Include="Controllers\StudentMarksController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
@@ -181,6 +183,7 @@
     <Compile Include="Models\MySecurity\CustomAuthorize.cs" />
     <Compile Include="Models\MySecurity\MaxFileSizeAttribute.cs" />
     <Compile Include="Models\StudentModel\StudentAttendanceModel.cs" />
+    <Compile Include="ViewModels\BooksViewModel.cs" />
     <Compile Include="ViewModels\RolesViewModel.cs" />
     <Compile Include="ViewModels\DropBoxViewModel.cs" />
     <Compile Include="ViewModels\SearchUserViewModel.cs" />
@@ -218,8 +221,18 @@
     <Content Include="AppJs\controller\classControllerHelper.js" />
     <Content Include="AppJs\home\classIndexPage.js" />
     <Content Include="AppJs\js_notes\Inheritance\inheritance_exp_1.js" />
+    <Content Include="images\school_img.jpg" />
+    <Content Include="Views\ChartGraphs\chartjs\Chart.js" />
+    <Content Include="Views\ChartGraphs\chartjs\Chart.min.js" />
+    <Content Include="Views\ChartGraphs\excanvas.js" />
+    <Content Include="Views\StudentProfile\UploadPartsReport\UploadPartsReport.cshtml" />
+    <Content Include="Views\StudentProfile\UploadPartsReport\_DownloadPartsReportFiles.cshtml" />
+    <Content Include="Views\StudentProfile\UploadPartsReport\dynamic_html.cshtml" />
+    <Content Include="Views\Books\_ViewBooks.cshtml" />
+    <Content Include="Views\ChartGraphs\ChartGraphIndex.cshtml" />
     <TypeScriptCompile Include="AppJs\js_notes\override\override_exp_1_class.ts" />
     <Content Include="AppJs\js_notes\mess\inheritance_exp_1.js" />
+    <Content Include="AppJs\js_notes\mess\mss2.js" />
     <Content Include="AppJs\js_notes\override\overrideRegisteredUserToDo.js" />
     <Content Include="AppJs\js_notes\override\override_exp_1.js" />
     <Content Include="AppJs\layout\deviceSize.js" />
@@ -1117,6 +1130,16 @@
     <Content Include="bootstrap-3.3.7\js\tests\unit\.jshintrc" />
     <Content Include="bootstrap-3.3.7\Scripts-3.4.1\jquery-3.4.1.min.map" />
     <Content Include="bootstrap-3.3.7\Scripts-3.4.1\jquery-3.4.1.slim.min.map" />
+    <Content Include="MediaFiles\books\Download\book-01.pdf" />
+    <Content Include="MediaFiles\books\Download\book-02.pdf" />
+    <Content Include="MediaFiles\books\Download\book-03.pdf" />
+    <Content Include="MediaFiles\books\Download\book-04.pdf" />
+    <Content Include="MediaFiles\books\Download\book-05.pdf" />
+    <Content Include="MediaFiles\books\Download\book-06.pdf" />
+    <Content Include="MediaFiles\books\Download\book-07.pdf" />
+    <Content Include="MediaFiles\books\Download\book-08.pdf" />
+    <Content Include="MediaFiles\books\Download\book-09.pdf" />
+    <Content Include="MediaFiles\books\Download\book-10.pdf" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -1341,6 +1364,14 @@
     <Folder Include="Content\images\delete\" />
     <Folder Include="Content\images\ReSized\img\" />
     <Folder Include="Content\images\Spijo\" />
+    <Folder Include="MediaFiles\books\Upload\" />
+    <Folder Include="MediaFiles\questionPapers\Download\" />
+    <Folder Include="MediaFiles\questionPapers\Upload\" />
+    <Folder Include="StudyMaterial\books\Download\" />
+    <Folder Include="StudyMaterial\books\Upload\" />
+    <Folder Include="StudyMaterial\questionPapers\Download\" />
+    <Folder Include="StudyMaterial\questionPapers\Upload\" />
+    <Folder Include="StudyMaterial\videos\" />
     <Folder Include="Views\Errors\" />
     <Folder Include="Views\Notify\" />
   </ItemGroup>
