--- a/School.UI/Web.config
+++ b/School.UI/Web.config
@@ -12,6 +12,18 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="books.DownloadFolder" value="~/books/Download/"/>
+    <add key="books.UploadFolder" value="~/books/Upload/"/>
+    <add key="books.DownloadFolder_online" value="\\192.168.5.12\books\Download\"/>
+    <add key="books.UploadFolder_online" value="\\192.168.5.12\books\Upload\"/>
+    <add key="questionPapers.DownloadFolder" value="~/questionPapers/Download/"/>
+    <add key="questionPapers.UploadFolder" value="~/questionPapers/Upload/"/>
+    <add key="questionPapers.DownloadFolder_online" value="\\192.168.5.12\questionPapers\Download\"/>
+    <add key="questionPapers.UploadFolder_online" value="\\192.168.5.12\questionPapers\Upload\"/>
+
+
+
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
